# agent-web

agent/: .gitignore  main.py  pyproject.toml
agent-ui/src/feature/assistant-ui/hooks/: use-chat-runtime.tsx
agent-ui/src/feature/assistant-ui/thread/: AssistantMessage.tsx  BranchPicker.tsx  EditComposer.tsx  MessageError.tsx  ThreadComposer.tsx  ThreadWelcome.tsx  UserMessage.tsx  index.ts  thread.tsx
agent-ui/src/feature/product-showcase/components/: product-grid.tsx
agent/app/agent/: base_agent.py
agent/app/agent/research_agent/: config.py  model.py  research_agent.py  state.py
agent/app/api/: dependencies.py
agent/app/api/router/: chat.py
agent/app/common/: base_models.py  llm.py  logging_config.py  prompt_config.py  prompt_loader.py
agent/app/config/: config.py
agent/app/container/: container.py
agent/app/models/: chat.py
agent/app/prompt/: research_promt.yml
