[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "uvicorn>=0.38.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "dependency-injector>=4.48.2",
]
